--- a/weather-service/src/main/resources/application.yaml
+++ b/weather-service/src/main/resources/application.yaml
@@ -17,7 +17,7 @@ spring:
 weather:
   api:
     openmeteo:
-      base-url: https://api.open-meteo.com/v1/forecast
+      base-url: https://api.open-meteo.com/v1
 
 
 logging:
