--- a/recommendation-service/pom.xml
+++ b/recommendation-service/pom.xml
@@ -90,6 +90,13 @@
 			<optional>true</optional>
 		</dependency>
 
+		<!-- SpringDoc -->
+		<dependency>
+			<groupId>org.springframework.graphql</groupId>
+			<artifactId>spring-graphql</artifactId>
+		</dependency>
+
+
 		<!-- Test Dependencies -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
