Setting up Eureka Server + API-GATEWAY service

--- a/weather-service/src/main/resources/application.yaml
+++ b/weather-service/src/main/resources/application.yaml
@@ -23,3 +23,21 @@ weather:
 logging:
   level:
     com.smartagri.weather: DEBUG
+
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
+    register-with-eureka: true
+    fetch-registry: true
+  instance:
+    prefer-ip-address: true
+    instance-id: ${spring.application.name}:${server.port}
+
+# Actuator Configuration
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health,info,metrics,env,loggers
+      base-path: /actuator
