--- a/alert-service/pom.xml
+++ b/alert-service/pom.xml
@@ -8,7 +8,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.2.0</version>
+		<version>3.4.12</version>
 		<relativePath/>
 	</parent>
 
@@ -23,6 +23,7 @@
 		<grpc.version>1.60.0</grpc.version>
 		<protobuf.version>3.25.1</protobuf.version>
 		<grpc-spring-boot.version>2.15.0.RELEASE</grpc-spring-boot.version>
+		<spring-cloud.version>2024.0.2</spring-cloud.version>
 	</properties>
 
 	<dependencies>
@@ -105,6 +106,12 @@
 			<artifactId>micrometer-registry-prometheus</artifactId>
 		</dependency>
 
+		<!-- Eureka client -->
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+		</dependency>
+
 		<!-- Testing -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -131,6 +138,18 @@
 			<scope>compile</scope>
 		</dependency>
 	</dependencies>
+
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>org.springframework.cloud</groupId>
+				<artifactId>spring-cloud-dependencies</artifactId>
+				<version>${spring-cloud.version}</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
 
 	<build>
 		<extensions>
