--- a/recommendation-service/src/main/resources/application.yaml
+++ b/recommendation-service/src/main/resources/application.yaml
@@ -33,3 +33,22 @@ logging:
   level:
     com.smartagri.recommendation: DEBUG
     graphql: DEBUG
+
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
+    register-with-eureka: true
+    fetch-registry: true
+  instance:
+    prefer-ip-address: true
+    instance-id: ${spring.application.name}:${server.port}
+
+
+# Actuator Configuration
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health,info,metrics,env,loggers
+      base-path: /actuator
